RESOLVED FIXED14155
SVGMatrix operations do not operate as expected
https://bugs.webkit.org/show_bug.cgi?id=14155
Summary SVGMatrix operations do not operate as expected
Antoine Quint
Reported 2007-06-14 22:48:47 PDT
See testcase.
Attachments
Testcase (1.45 KB, image/svg+xml)
2007-06-14 22:50 PDT, Antoine Quint
no flags
Initial patch (5.86 KB, patch)
2007-06-15 12:10 PDT, Nikolas Zimmermann
eric: review+
Antoine Quint
Comment 1 2007-06-14 22:50:58 PDT
Created attachment 15039 [details] Testcase Should fade out, scale down and slightly rotate an object around its center using an animation. Works fine in Opera and Firefox, but not in WebKit.
Nikolas Zimmermann
Comment 2 2007-06-15 12:10:03 PDT
Created attachment 15060 [details] Initial patch Fixes JSSVGMatrix semantics.
Nikolas Zimmermann
Comment 3 2007-06-15 14:10:17 PDT
Landed in r23551.
Eric Seidel (no email)
Comment 4 2007-06-15 14:11:10 PDT
Comment on attachment 15060 [details] Initial patch Looks good.
Note You need to log in before you can comment on or make changes to this bug.