Reviewed by Eric. Fixes: http://bugs.webkit.org/show_bug.cgi?id=14155

JSSVGMatrix was not working properly.
"matrix.translate(10, 10)" actually altered 'matrix' instead of returning a
new SVGMatrix object, as described in SVG 1.1 specification.



Canonical link: https://commits.webkit.org/20399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26409 268f45cc-cd09-0410-ab3c-d52691b4dbfc